fix: modified precommit to work Coverage should now run to generate report so fail-under 70% works

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
   hooks:
     - id: unittest-check
       name: unittest-check
-      entry: python3 -m unittest discover
+      entry: python3 -m coverage run -m unittest discover
       args: ["-v", "-s", ".", "-p", "'*test*.py"]
       pass_filenames: false
       language: system
